--- a/Views/Home/UserInfo.cshtml
+++ b/Views/Home/UserInfo.cshtml
@@ -1,11 +1,45 @@
 ﻿@model MvcModelValidationApp.Models.User
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
+<style>
+    .field-validation-error{
+        color: red;
+    }
+
+    input.input-validation-error{
+        border: 1px solid red;
+    }
+    input.valid{
+        border: 1px solid green;
+    }
+</style>
+
 <form method="post">
+    <div asp-validation-summary="All"></div>
     <p>
         <label asp-for="Name">Name</label><br />
         <input type="text" asp-for="Name" />
         <span asp-validation-for="Name" />
+    </p>
+    <p>
+        <label asp-for="Email">Email</label><br />
+        <input type="text" asp-for="Email" />
+        <span asp-validation-for="Email" />
+    </p>
+    <p>
+        <label asp-for="Code">Code</label><br />
+        <input type="number" asp-for="Code" />
+        <span asp-validation-for="Code" />
+    </p>
+    <p>
+        <label asp-for="Password">Password</label><br />
+        <input type="password" asp-for="Password" />
+        <span asp-validation-for="Password" />
+    </p>
+    <p>
+        <label asp-for="PasswordConfirm">Password Confirm</label><br />
+        <input type="password" asp-for="PasswordConfirm" />
+        <span asp-validation-for="PasswordConfirm" />
     </p>
     <p>
         <label asp-for="Age">Age</label><br />
@@ -15,6 +49,7 @@
     <p>
         <input type="submit" value="Send" />
     </p>
+    
 </form>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
